# Moore-Reverb-Filter-Gui

./: .gitignore  README.md
ImGui/: .gitmodules  CMakeLists.txt  README.txt
ImGui/source/: AudioManager.cpp  AudioManager.h  GraphWindow.cpp  GraphWindow.h  OptionsWindow.cpp  OptionsWindow.h  Reverb.h  ReverbHandler.cpp  ReverbHandler.h  callback_helper.h  main.cpp  render_dx11.cpp  render_dx11.h  utils.cpp  utils.h
